Make project run with java8